# elfragmentador

./: .flake8  .gitignore  .pre-commit-config.yaml  404.html  Dockerfile  README.md  dev_requirements.txt  evaluate.py  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt  setup.cfg  tox.ini  train.py
.github/: dependabot.yml
.github/workflows/: CICD.yml  publish.yml  test.yml
API reference/PepTransformerModel/: index.html
CLI reference/: cli.qmd
CLI reference/cli/: index.html
benchmarking_workflow/: README.md  cluster.json  msconvert.bash  sample_info.tsv  workflow.smk
benchmarking_workflow/comet_params/: comet.params.high_high
benchmarking_workflow/spectrast_params/: spectrast.usermods
data_setup/: comb_tables.R  combine_tables.R  encode_spectra.py  get_data.py
docs/: README.md  quickstart.md  quickstart.qmd  render_nbs.bash
docs/API reference/: Annotation.md  NNEncoding.md  PepTransformerModel.md
docs/CLI reference/: cli.qmd  elfragmentador_append_pin.md  elfragmentador_append_pin.qmd  elfragmentador_calculate_irt.md  elfragmentador_calculate_irt.qmd  elfragmentador_convert_sptxt.md  elfragmentador_convert_sptxt.qmd  elfragmentador_evaluate.md  elfragmentador_predict_csv.md  elfragmentador_train.md  elfragmentador_train.qmd
docs/img/: data_flow.mermaid
elfragmentador/: __init__.py  annotate.py  cli.py  constants.py  datamodules.py  encoding_decoding.py  evaluate.py  experiment.py  isoforms.py  math_utils.py  metrics.py  model.py  named_batches.py  nn_encoding.py  predictor.py  rt.py  scoring.py  spectra.py  train.py  utils.py  utils_data.py  version.py  visualization.py
elfragmentador/config/: __init__.py  default_config.toml
elfragmentador/data/: converter.py  datamodules.py  predictor.py  torch_datasets.py
elfragmentador/datasets/: __init__.py  batch_utils.py  dataset.py  peptide_dataset.py  percolator.py  sequence_dataset.py  spectronaut_dataset.py
elfragmentador/model/: __init__.py  ms_transformer_layers.py  nn_encoding.py  peptransformer.py  transformer_layers.py  visualization.py
evaluation/: .gitignore  AcetylStrep.html  Arabidopsis.html  CElegansGG.html  DOCKERFILE  EcoliTMT.html  HLApeptides.html  PhospoAHLFQ.html  PhospoTMT.html  README.md  dockerized_run.bash  pyproject.toml  template.qmd
evaluation/reference_files/: comet.params.new
evaluation/results/AcetylStrep/mokapot/: mokapot.peptides.txt.evaluation.csv
evaluation/results/Arabidopsis/mokapot/: mokapot.peptides.txt.evaluation.csv
evaluation/results/CElegansGG/mokapot/: mokapot.peptides.txt.evaluation.csv
evaluation/results/EcoliTMT/mokapot/: mokapot.peptides.txt.evaluation.csv
evaluation/results/HLApeptides/mokapot/: mokapot.peptides.txt.evaluation.csv
evaluation/results/PhospoAHLFQ/mokapot/: mokapot.peptides.txt.evaluation.csv
evaluation/results/PhospoTMT/mokapot/: mokapot.peptides.txt.evaluation.csv
evaluation/scripts/: psms_to_ssl.py
evaluation/sptxt/: HLApeptides.mokapot.psms.sptxt.comparisson.txt
notebooks/: README.md  bayes_architecture_search.ipynb  visualize_attention.html  visualize_attention.ipynb  visualize_embeddings.html  visualize_embeddings.ipynb  visualize_weights.ipynb
notebooks/docs/: render.bash  visualize_attention.qmd  visualize_embeddings.ipynb  visualize_embeddings.qmd
notebooks/etc/: bayes_architecture_search.qmd
quickstart/: index.html
search/: search_index.json
templates/: template_evaluation.ipynb
tests/: conftest.py  test_annotate.py  test_cli.py  test_constants.py  test_conversion.py  test_dataloader_model_integration.py  test_dataloaders.py  test_encoding_decoding.py  test_evaluate.py  test_isoforms.py  test_metrics.py  test_model.py  test_nn_encoding.py  test_pin_append.py  test_prediction.py  test_rt.py  test_scoring.py  test_spectra.py  test_training.py  test_utils.py  tiny_model.py
tests/data/: FTMS_HCD_20_annotated_2019-11-12_filtered.msp  combined_holdout.csv  combined_pl_TUM_proteo_TMT_3_skyline.rt.csv  combined_train.csv  combined_val.csv  encoded_spectra.csv  only_matches_small_proteome_spectrast.sptxt  onlymatches_single_spectrum.txt  sample.sptxt  single_spectrum.txt  small_phospho_spectrast.sptxt  small_proteome_spectrast.sptxt
tests/data/01625b_GA1-TUM_first_pool_1_01_01-2xIT_2xHCD-1h-R1/: 01625b_GA1-TUM_first_pool_1_01_01-2xIT_2xHCD-1h-R1.elfragmentador.pin  01625b_GA1-TUM_first_pool_1_01_01-2xIT_2xHCD-1h-R1.mzML  01625b_GA1-TUM_first_pool_1_01_01-2xIT_2xHCD-1h-R1.pep.xml  01625b_GA1-TUM_first_pool_1_01_01-2xIT_2xHCD-1h-R1.pin  README.md  TUM_first_pool_1_contam.decoy.fasta  comet.params.high_high
tests/data/dlib/: small_yeast.dlib
tests/data/fasta/: P0DTC4.fasta
tests/data/parquet/: preprocessed.parquet
tests/data/prediction_csv/: sample_prediction_csv.csv  sample_prediction_csv_2.csv
tests/data/prediction_txt/: sample_prediction.txt
tests/data/train_data_sample/: combined_holdout.csv  combined_train.csv  combined_val.csv
tests/data/train_data_sample_compressed/: compress.sh
tests/dataset_tests/: test_fasta_dataset.py  test_spectronaut_dataset.py
train_data/: .dvcignore  .gitignore  README.md  dvc.yaml
train_data/.dvc/: config
train_data/prospect_data/: .gitignore  TUM_HLA2_meta_data.parquet.dvc  TUM_HLA_meta_data.parquet.dvc  TUM_aspn_meta_data.parquet.dvc  TUM_first_pool_meta_data.parquet.dvc  TUM_isoform_meta_data.parquet.dvc  TUM_lysn_meta_data.parquet.dvc  TUM_missing_first_meta_data.parquet.dvc  TUM_proteo_TMT_meta_data.parquet.dvc  TUM_second_addon_meta_data.parquet.dvc  TUM_second_pool_meta_data.parquet.dvc  TUM_third_pool_meta_data.parquet.dvc  Thermo_SRM_Pool_meta_data.parquet.dvc  get.py  get.zsh  test_get.zsh
train_data/prospect_data/TUM_aspn/: .gitignore  (+41 more)
train_data/scripts/: process_fragment_data.py  process_peaks.ipynb  process_peaks.py  rt_qc.py  vectorize_sequences.py
transprosit/: __init__.py  annotate.py  constants.py  datamodules.py  encoding_decoding.py  model.py  spectra.py  train.py
viz_app/: .gitignore  app.py  app.yaml  main.py  pyproject.toml  requirements.txt
viz_app/templates/: index.html  viz_template.html
(+231 files in other folders)
