[tool.poetry]
name = "elfragmentador"
version = "0.53.3"
description = "Predicts peptide fragmentations using transformers"
authors = ["J. Sebastian Paez <jspaezp@gmail.com>"]
license = "Apache 2.0"
readme = "README.md"

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/jspaezp/elfragmentador/issues"

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
pandas = "^1.0.0"
numpy = "^1.23.2"
torch = "^1.12.1"
pytorch-lightning = "^1.7.4"
wandb = "^0.10.13"
uniplot = "^0.3.5"
networkx = "^2.5"
llvmlite = "^0.39.0"
lxml = "^4.6.3"
pyteomics = "^4.4.2"
torchmetrics = "^0.9.3"
spectrum-utils = "^0.3.5"
pyarrow = "^9.0.0"
scipy = "^1.9.0"
tensorboard = "^2.10.0"
mkdocs = "^1.3.1"

[tool.poetry.dev-dependencies]
black = {extras = ["jupyter"], version = "^22.8.0"}
pytest = "^6.2.1"
pytest-datadir = "^1.3.1"
flake8 = "^3.8.4"
nbconvert = "^6.0.7"
ipykernel = "^5.4.3"
# scikit-learn = "^1.24.0"
seaborn = "^0.11.0"
matplotlib = "^3.3.0"
MonkeyType = "^20.5.0"
pytest-cov = "^2.11.1"
pydocstyle = "^5.1.1"
pytest-benchmark = "^3.2.3"
snakemake = "^5.32.2"
mokapot = "^0.7.3"
pyteomics = "^4.4.1"
pytest-codecov = "^0.3.0"
Flask = "^2.0.1"
line-profiler = "^3.3.0"
gprof2dot = "^2021.2.21"
pygal = "^2.4.0"
bayesian-optimization = "^1.2.0"
isort = "^5.10.1"
docformatter = "^1.4"
pytest-doctestplus = "^0.12.0"
mkdocs = "^1.3.1"
Jinja2 = "^3.1.2"
importlib = "^1.0.4"
mkdocstrings = "^0.19.0"
mkdocs-material = "^8.4.2"
mkdocstrings-python = "^0.7.1"
mkdocs-pymdownx-material-extras = "^1.4"
mdformat-gfm = "^0.3.5"
pylint = "^2.15.0"
pydocstringformatter = "^0.7.2"
pyupgrade = "^2.37.3"
autoflake = "^1.5.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.tox]
legacy_tox_ini = """
[testenv]
deps =
    pytest
commands =
    pytest tests/ --import-mode importlib

[tox]
envlist = py{310}
isolated_build = true
"""

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-v --cov=elfragmentador --benchmark-group-by=func"
doctest_plus = "enabled"
doctest_optionflags = "ELLIPSIS NORMALIZE_WHITESPACE FLOAT_CMP"
testpaths = [
    "tests",
    "elfragmentador",
]
filterwarnings=[
    'ignore:.*Call to deprecated.*[File|Enum|Field]Descriptor\(\).*:DeprecationWarning',
    'ignore:.*Call to deprecated.*Descriptor\(\).*:DeprecationWarning',
]

[tool.black]
target-version = [ "py310", ]
line-length = 88

[tool.isort]
profile = "black"

[tool.poetry.scripts]
elfragmentador_train = "elfragmentador.cli:train"
elfragmentador_evaluate = "elfragmentador.cli:evaluate_checkpoint"
elfragmentador_convert_sptxt = "elfragmentador.cli:convert_sptxt"
elfragmentador_calculate_irt = "elfragmentador.cli:calculate_irt"
elfragmentador_append_pin = "elfragmentador.cli:append_predictions"
elfragmentador_predict_csv = "elfragmentador.cli:predict_csv"
elfragmentador_predict_fasta = "elfragmentador.cli:predict_fasta"
