[tool.poetry]
name = "elfragmentador"
version = "0.53.6"
description = "Predicts peptide fragmentations using transformers"
authors = ["J. Sebastian Paez <jspaezp@gmail.com>"]
license = "Apache 2.0"
readme = "README.md"

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/jspaezp/elfragmentador/issues"

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
llvmlite = "^0.39.0"
lxml = "^4.6.3"
networkx = "^2.5"
numpy = "^1.23.2"
pandas = "^1.0.0"
pyarrow = "^9.0.0"
pyteomics = "^4.4.2"
pytorch-lightning = "^1.7.4"
spectrum-utils = "^0.3.5"
tensorboard = "^2.10.0"
torch = "^1.12.1"
torchmetrics = "^0.9.3"
uniplot = "^0.3.5"
wandb = "^0.10.13"

[tool.poetry.group.dev.dependencies]
autoflake = "^1.5.3"
black = {extras = ["jupyter"], version = "^22.8.0"}
flake8 = "^3.8.4"
isort = "^5.10.1"
pydocstringformatter = "^0.7.2"
pytest = "^6.2.1"
pytest-benchmark = "^3.2.3"
pytest-codecov = "^0.3.0"
pytest-cov = "^2.11.1"
pytest-datadir = "^1.3.1"
pyupgrade = "^2.37.3"
mdformat = "^0.7.16"
mdformat-black = "^0.1.1"
mdformat-gfm = "^0.3.5"
docformatter = "^1.4"

[tool.poetry.group.checks.dependencies]
mdformat = "^0.7.16"
mdformat-black = "^0.1.1"
mdformat-gfm = "^0.3.5"
black = {extras = ["jupyter"], version = "^22.8.0"}
flake8 = "^3.8.4"
isort = "^5.10.1"


[tool.poetry.group.docs.dependencies]
seaborn = "^0.11.2"
scikit-learn = "^1.1.2"
scipy = "^1.9.1"
nbformat = "^5.4.0"
jupyter = "^1.0.0"
mkdocs = "^1.3.1"
mkdocs-material = "^8.4.2"
mkdocs-pymdownx-material-extras = "^1.4"
mkdocstrings = "^0.19.0"
mkdocstrings-python = "^0.7.1"
Jinja2 = "^3.1.2"


[too.poetry.group.helper.dependencies]
MonkeyType = "^20.5.0"
pydocstyle = "^5.1.1"
line-profiler = "^3.3.0"

[too.poetry.group.data.dependencies]
pyteomics = "^4.4.1"
ipykernel = "^5.4.3"
seaborn = "^0.11.0"
matplotlib = "^3.3.0"
mokapot = "^0.7.3"
bayesian-optimization = "^1.2.0"
pytest-doctestplus = "^0.12.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.tox]
legacy_tox_ini = """
[testenv]
deps =
    pytest
commands =
    pytest tests/ --import-mode importlib

[tox]
envlist = py{310}
isolated_build = true
"""

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-v --cov=elfragmentador --benchmark-group-by=func"
doctest_plus = "enabled"
doctest_optionflags = "ELLIPSIS NORMALIZE_WHITESPACE FLOAT_CMP"
testpaths = [
    "tests",
    "elfragmentador",
]
filterwarnings=[
    'ignore:.*Call to deprecated.*[File|Enum|Field]Descriptor\(\).*:DeprecationWarning',
    'ignore:.*Call to deprecated.*Descriptor\(\).*:DeprecationWarning',
]

[tool.black]
target-version = [ "py310", ]
line-length = 88

[tool.isort]
profile = "black"

[tool.poetry.scripts]
elfragmentador_train = "elfragmentador.cli:train"
elfragmentador_evaluate = "elfragmentador.cli:evaluate_checkpoint"
elfragmentador_convert_sptxt = "elfragmentador.cli:convert_sptxt"
elfragmentador_calculate_irt = "elfragmentador.cli:calculate_irt"
elfragmentador_append_pin = "elfragmentador.cli:append_predictions"
elfragmentador_predict_csv = "elfragmentador.cli:predict_csv"
elfragmentador_predict_fasta = "elfragmentador.cli:predict_fasta"
