[tool.poetry]
name = "elfragmentador"
version = "0.56.0"
description = "Predicts peptide fragmentations using transformers"
authors = ["J. Sebastian Paez <jspaezp@gmail.com>"]
license = "Apache 2.0"
readme = "README.md"

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/jspaezp/elfragmentador/issues"

[tool.poetry.dependencies]
# BLocking python until torch releases a wheel that works
python = ">=3.9,<3.11"
lxml = "^4.6.3"
numpy = "^1.23.2"
pandas = "^1.0.0"
pyarrow = "^9.0.0"
pyteomics = "^4.4.2"
pytorch-lightning = "^1.7.4"
torchmetrics = "^0.9.3"
uniplot = "^0.7.0"
wandb = "^0.13.0"
numba = "^0.56.2"
# BLocking torch 1.13 update until poetry fixes it
# https://github.com/python-poetry/poetry/issues/6939
# https://github.com/pytorch/pytorch/pull/88826
torch = {version = ">=1.12.0,<1.13.0", python = ">=3.9,<3.11"}
ms2ml = ">=0.0.29"
loguru = "^0.6.0"
networkx = "^2.8.8"

[tool.poetry.group.plotting.dependencies]
networkx = "^2.8.8"
spectrum-utils = "^0.4.1"
llvmlite = { version = "^0.39", python = "<3.11" }

[tool.poetry.group.dev.dependencies]
pytest = "^6.2.1"
flaky = "^3.7.0"
pytest-benchmark = "^3.2.3"
pytest-cov = "^4.0.0"
pytest-datadir = "^1.3.1"
pytest-doctestplus = "^0.12.0"

[tool.poetry.group.checks.dependencies]
black = {extras = ["jupyter"], version = "^22.1.0"}
isort = "^5.10.1"
ruff = "^0.0.46"

[tool.poetry.group.docs.dependencies]
seaborn = "^0.11.2"
scikit-learn = "^1.1.2"
scipy = "^1.9.1"
nbformat = "^5.4.0"
jupyter = "^1.0.0"
mkdocs = "^1.3.1"
mkdocs-material = "^8.4.2"
mkdocs-pymdownx-material-extras = "^1.4"
mkdocstrings = "^0.19.0"
mkdocstrings-python = "^0.7.1"
Jinja2 = "^3.1.2"
mkquartodocs = "^0.5.7"
papermill = "^2.4.0"

[tool.poetry.group.data]
optional = true

[tool.poetry.group.data.dependencies]
pyteomics = "^4.4.1"
ipykernel = "^5.4.3"
seaborn = "^0.11.0"
matplotlib = "^3.3.0"
mokapot = "^0.9.0"
bayesian-optimization = "^1.2.0"
pytest-doctestplus = "^0.12.0"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.tox]
legacy_tox_ini = """
[testenv]
deps =
    pytest
commands =
    pytest tests/ --import-mode importlib

[tox]
envlist = py{310}
isolated_build = true
"""

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-v --cov=elfragmentador --benchmark-group-by=func"
doctest_plus = "enabled"
doctest_optionflags = "ELLIPSIS NORMALIZE_WHITESPACE FLOAT_CMP"
testpaths = [
    "tests",
    "elfragmentador",
]
filterwarnings=[
    'ignore:.*Call to deprecated.*[File|Enum|Field]Descriptor\(\).*:DeprecationWarning',
    'ignore:.*Call to deprecated.*Descriptor\(\).*:DeprecationWarning',
]

[tool.black]
target-version = [ "py39", ]
line-length = 88

[tool.ruff]
line-length = 88

[tool.isort]
profile = "black"

[tool.poetry.scripts]
elfragmentador = "elfragmentador.cli:main_cli"
