[tool.poetry]
name = "elfragmentador_viz_app"
version = "0.1.0"
description = "A flask app to visualize data and prediction from ElFragmentador"
authors = ["Jspaezp <jspaezp@gmail.com>"]
license = "Apache 2.0"

[tool.poetry.dependencies]
python = ">=3.9,<3.10"
Flask = "^2.0.1"
torch = "^1.9.0"
matplotlib = "^3.4.2"
elfragmentador = {git = "https://github.com/jspaezp/elfragmentador.git", rev = "main"}

[tool.poetry.dev-dependencies]
gunicorn = "^20.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
